<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>de.unistuttgart.einf.moviemanager</groupId>
	<artifactId>moviemanager</artifactId>
	<version>1.0.0</version>

	<properties>
		<maven.compiler.source>25</maven.compiler.source>
		<maven.compiler.target>25</maven.compiler.target>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<dependencies>
		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
			<version>2.13.2</version>
		</dependency>
        <dependency>
            <groupId>uk.co.conoregan</groupId>
            <artifactId>themoviedbapi</artifactId>
            <version>2.4.0</version>
        </dependency>
		<dependency>
			<groupId>me.xdrop</groupId>
			<artifactId>fuzzywuzzy</artifactId>
			<version>1.4.0</version>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter</artifactId>
			<version>6.0.1</version>
			<scope>test</scope>
		</dependency>
	</dependencies>
</project>
